# example_local_python_module_poetry

./: .gitignore  example_pip.py  pyproject.toml  pyproject2.toml  readme.md  reproduce.sh  script.py
.github/workflows/: reproduce_pip.yaml  reproduce_pip_mac.yaml  reproduce_pip_older.yaml  reproduce_pip_poetry.yaml  run_example.yaml  run_example_old_poetry.yaml
folder/: script.py
my_module/: functions.py
mymodule/: setup.py
mymodule/mymodule/: __init__.py
mymodule/mymodule.egg-info/: PKG-INFO  SOURCES.txt
